[package]
name = "concurrent-pool"
version = "0.1.1"
edition = "2024"
authors = ["Julian Wang <traceflight@outlook.com>"]
description = "A concurrent object pool."
readme = "README.md"
documentation = "https://docs.rs/concurrent-pool/"
repository = "https://github.com/traceflight/concurrent-pool"
keywords = ["concurrency", "memory-pool", "object-pool", "lock-free"]
categories = ["data-structures", "memory-management", "concurrency"]
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-queue = "0.3.12"
serde = { version = "1.0.226", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]